--- a/app-manage/package.json
+++ b/app-manage/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
